Started building arts and Culture page

--- a/arts-and-culture.html
+++ b/arts-and-culture.html
@@ -29,40 +29,66 @@
             </ul>
         </nav>
     </header>
-    <section class="hero-section">
-        <h1>History of Washington</h1>
+    <section class="arts-hero-section">
+        <h1>Arts & Culture </h1>
     </section>
     <section class="content-section">
         <div class="content-header">
 
-            <h2>History</h2>
+            <h2>Arts and Cutlure Of Washington</h2>
             <hr class="content-hr">
         </div>
         <div class="content-box">
             <div class="content-main">
-
+                <p>Washington state, particularly the bustling metropolis of Seattle, pulsates with a dynamic arts and
+                    culture scene that reverberates through its streets and resonates in its institutions. Renowned
+                    globally for its music heritage, Seattle birthed the grunge movement in the 1990s, spawning iconic
+                    bands like Nirvana and Pearl Jam. Today, its music scene remains vibrant, with venues spanning from
+                    intimate clubs to grand concert halls, showcasing a diverse array of genres.</p>
+                <p>Beyond its musical legacy, Washington boasts rich Native American art traditions, reflected in
+                    institutions like the Burke Museum and the Washington State History Museum. These museums house
+                    extensive collections of Native American art, artifacts, and cultural exhibits, offering visitors a
+                    glimpse into the rich heritage of the region's indigenous peoples. In addition to traditional art
+                    forms, Washington is also a hotbed of artistic innovation, with a thriving contemporary art scene
+                    that pushes boundaries and challenges conventions.</p>
+                <p>Public art installations further enrich the cultural fabric of the state, adorning cityscapes with a
+                    myriad of sculptures, murals, and installations. From the iconic Fremont Troll to the towering
+                    Hammering Man, these artworks not only beautify urban environments but also spark dialogue and
+                    reflection. The theater scene in Seattle is equally vibrant, with esteemed companies such as the
+                    Seattle Repertory Theatre, ACT Theatre, and the 5th Avenue Theatre staging compelling productions
+                    year-round, ranging from classic plays to cutting-edge experimental works.</p>
+                <p>Museums abound in Washington, catering to a variety of interests and tastes. The Museum of History &
+                    Industry (MOHAI) offers insights into the state's rich history, while the Museum of Flight explores
+                    the fascinating world of aviation. Contemporary art enthusiasts can explore the Henry Art Gallery,
+                    known for its thought-provoking exhibitions and innovative programming. Throughout the year,
+                    cultural festivals celebrate the state's diverse communities, showcasing traditions from around the
+                    world. From the Northwest Folklife Festival to Bumbershoot and the Seattle International Film
+                    Festival (SIFF), these events serve as vibrant showcases of cultural diversity and creativity. In
+                    every corner of Washington, from its bustling cities to its serene landscapes, the arts and culture
+                    scene thrives, inviting exploration, discovery, and inspiration.</p>
             </div>
             <aside class="content-aside">
-                <h2 class="aside-h2">5 Fun Facts about Washington</h2>
+                <h2 class="aside-h2">Top 5 Places to Explore in Seattle</h2>
                 <ol>
-                    <li class="aside-li-item">The Washington State flag is the only one that's green.</li>
-                    <li class="aside-li-item">The square dance is Washington's Official State Dance.</li>
-                    <li class="aside-li-item">Richland, Washington is home to the largest freezer on earth.</li>
-                    <li class="aside-li-item">In Everett, it is illegal to put a hypnotized person on display in a store
-                        window.</li>
-                    <li class="aside-li-item">Pickleball was invented in Washington.</li>
+                    <li class="aside-li-item">Seattle Art Museum (SAM).</li>
+                    <li class="aside-li-item">Chihuly Garden and Glass.</li>
+                    <li class="aside-li-item">Pike Place Market.</li>
+                    <li class="aside-li-item">Museum of Pop Culture (MoPOP).</li>
+                    <li class="aside-li-item">Frye Art Museum.</li>
                 </ol>
             </aside>
         </div>
 
     </section>
-    <!---Photo Gallery made with HTML Table--->
-    <section class="photo-table">
-        <table>
+    <section class="photo-table-section">
+        <table class="photo-table">
             <tr>
-                <H2>Photos</H2>
+                <td class="arts-td"><img src="img/table-img-1.jpg" alt="Seattle art musem entrance" class="table-img">
+                </td>
+                <td class="arts-td"><img src="img/table-img-2.jpg" alt="Pikes place market at night" class="table-img">
+                </td>
+                <td></td>
             </tr>
-
         </table>
     </section>
     <footer>
